# quant-autoresearch

./: README.md  prepare.py  program.md  pyproject.toml  strategy.py
data/: 0050.csv  0052.csv  0056.csv  00631L.csv  00632R.csv  00637L.csv  00642U.csv  00663L.csv  00675L.csv  00679B.csv  00687B.csv  00708L.csv  00715L.csv  00738U.csv  00878.csv  00919.csv  00935.csv  00937B.csv  009816.csv  00981A.csv  00991A.csv  00992A.csv  1303.csv  1304.csv  1305.csv  1309.csv  1326.csv  1519.csv  1560.csv  1605.csv  1708.csv  1717.csv  1785.csv  1802.csv  1815.csv  2059.csv  2301.csv  2303.csv  2308.csv  2313.csv  (+160 more)
