[project]
name = "quant-research"
version = "0.2.0"
description = "Autonomous quantitative trading research — Taiwan stock breakout strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "requests>=2.32.0",
]
